Add Identified Constraints to the report

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -106,6 +106,17 @@
 \subsection{ER Diagram}
 
 \subsection{Identified Constraints}
+\begin{itemize}
+  \item{Every application user must have both a username and a password}
+  \item{Usernames must be unique}
+  \item{Every board must have a title and must be associated with an existing owner}
+  \item{Every comment must have an owner}
+  \item{Every comment must have a time and text}
+  \item{Every comment must be associated with an existing task}
+  \item{Every list must have a title and must be associated with an existing board}
+  \item{Every task must be associated with an existing list}
+  \item{Every entity in every table has a unique id}
+\end{itemize}
 
 \subsection{Assumptions about the domain}
 
