Add SQL Create code snipets

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -7,7 +7,38 @@
     \usepackage{graphicx}
     \usepackage{imakeidx}
     \usepackage{hyperref}
-    \graphicspath{{Images/}}
+    \usepackage{listings}
+    \usepackage{color}
+    \usepackage{color}
+
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{red},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\footnotesize,
+    breakatwhitespace=false,
+    breaklines=true,
+    captionpos=b,
+    keepspaces=true,
+    numbers=left,
+    numbersep=5pt,
+    showspaces=false,
+    showstringspaces=false,
+    showtabs=false,
+    tabsize=2
+}
+
+\lstset{style=mystyle}
+
+
+    \graphicspath{Images/}
     \setcounter{tocdepth}{2}
     \makeglossaries
     \makeindex[columns=2, title=Alphabetical Index]
@@ -29,7 +60,7 @@
 
     % The following code is borrowed from:  https://tex.stackexchange.com/a/86310/10898
 
-    \newcommand\titlepagedecoration{%
+    \newcommand\titlepagedecoration{
     \begin{tikzpicture}[remember picture,overlay,shorten >= -10pt]
 
     \coordinate (aux1) at ([yshift=-15pt]current page.north east);
@@ -129,6 +160,74 @@
 \section{Database Implementation}
 
 \subsection{Create Table Statements}
+    \begin{lstlisting}[language=SQL, caption=ApplicationUser Table]
+      create table ApplicationUser(
+        Id char(32),
+        Username varchar(100) not null,
+        Passwordhash varchar(100) not null,
+        primary key ( Id )
+      );
+    \end{lstlisting}
+
+    \begin{lstlisting}[language=SQL, caption=Board Table]
+      create table Board(
+        Id char(32),
+        Title varchar(100) not null,
+        OwnerId char(32),
+        primary key ( id ),
+        foreign key ( OwnerId ) references ApplicationUser( Id )
+      );
+    \end{lstlisting}
+
+    \begin{lstlisting}[language=SQL, caption=BoardMember Table]
+      create table BoardMember(
+        BoardId char(32),
+        MemberId char(32),
+        foreign key ( BoardId ) references Board( Id ),
+        foreign key ( MemberId ) references ApplicationUser( Id )
+      );
+    \end{lstlisting}
+    \begin{lstlisting}[language=SQL, caption=List Table]
+      create table List(
+        Id char(32),
+        Title varchar(100) not null,
+        BoardPosition int not null,
+        BoardId char(32),
+        primary key ( id ),
+        foreign key ( BoardId ) references Board( Id )
+      );
+    \end{lstlisting}
+    \begin{lstlisting}[language=SQL, caption=Task Table]
+      create table Task(
+        Id char(32),
+        Title varchar(100) not null,
+        Descriptor varchar(500) not null,
+        DueDate datetimeoffset,
+        ListId char(32),
+        primary key ( id ),
+        foreign key ( ListId ) references List( Id )
+      )
+    \end{lstlisting}
+    \begin{lstlisting}[language=SQL, caption=TaskAssignee Table]
+      create table TaskAssignee(
+        TaskId char(32),
+        AssigneeId char(32),
+        foreign key ( TaskId ) references Task( Id ),
+        foreign key ( AssigneeId ) references ApplicationUser( Id )
+      )
+    \end{lstlisting}
+    \begin{lstlisting}[language=SQL, caption=Comment Table]
+      create table Comment(
+        Id char(32),
+        TimeCreated datetimeoffset not null,
+        MessageText varchar(100) not null,
+        TaskId char(32),
+        OwnerId char(32),
+        primary key ( id ),
+        foreign key ( TaskId ) references Task( Id ),
+        foreign key ( OwnerId ) references ApplicationUser( Id )
+      )
+    \end{lstlisting}
 
 \subsection{Insert Statements}
 
