--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -55,7 +55,15 @@
         {\large \@author}}
     \makeatother
     \author{
-        Sam Miller \\
+      Luke Duhe \\
+      JJ Juarez \\
+      Drake Lambert \\
+      Kevin Phan \\
+      Sam Miller \\
+      Tristan Miller \\
+      Timothy Ratliff \\
+      Steven Vondenstein \\
+      William Woodfin \\
        }
 
     % The following code is borrowed from:  https://tex.stackexchange.com/a/86310/10898
@@ -110,7 +118,7 @@
 \begin{titlepage}
 
 	\noindent
-	\titlefont Ollert\par
+	\titlefont  llert\par
 	\epigraph{Project Report\\ November 30, 2018}%
 	{\textit{}\\ \textsc{}}
 	\null\vfill
@@ -149,7 +157,11 @@
   \item{Every entity in every table has a unique id}
 \end{itemize}
 
+
 \subsection{Assumptions about the domain}
+  \begin{itemize}
+    \item Users should only have access to the boards they are members of
+  \end{itemize}
 
 \subsection{database design process}
 
