Add ER diagram to report

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -5,6 +5,7 @@
     \usepackage{lipsum}
     \usepackage{glossaries}
     \usepackage{graphicx}
+    \graphicspath{{Images/}}
     \usepackage{imakeidx}
     \usepackage{hyperref}
     \usepackage{listings}
@@ -139,8 +140,10 @@
 \section{Database Design}
 \subsection{Introduction}
 
+\pagebreak
 \subsection{ER Diagram}
-
+\includegraphics{Images/ER}
+\pagebreak
 \subsection{Identified Constraints}
 \begin{itemize}
   \item{Every application user must have both a username and a password}
