fix extra blank page

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -139,11 +139,13 @@
 
 \section{Database Design}
 \subsection{Introduction}
-Ollert is the backend database for a Kanban Board application (similar to https://Trello.com). It supports multiple users collaborating on one or many boards, through comments and task generation. 
+Ollert is the backend database for a Kanban Board application (similar to https://Trello.com). It supports multiple users collaborating on one or many boards, through comments and task generation.
+
 \pagebreak
 \subsection{ER Diagram}
-\includegraphics{Images/ER}
+\includegraphics[scale=0.75]{Images/ER}
 \pagebreak
+
 \subsection{Identified Constraints}
 \begin{itemize}
   \item{Every application user must have both a username and a password}
