add table descriptions to report

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -170,6 +170,27 @@ Ollert is the backend database for a Kanban Board application (similar to https:
 \subsection{Database Design Process}
 
 \subsection{Ollert's tables}
+ApplicationUser Table
+\csvautolongtable{describeApplicationUser.csv}
+\hrule
+Board Table
+\csvautolongtable{describeBoard.csv}
+\hrule
+BoardMember Table
+\csvautolongtable{describeBoardMember.csv}
+\hrule
+List Table
+\csvautolongtable{describeList.csv}
+\hrule
+Task Table
+\csvautolongtable{describeTask.csv}
+\hrule
+TaskAssignee Table
+\csvautolongtable{describeTaskAssignee.csv}
+\hrule
+Comment Table
+\csvautolongtable{describeComment.csv}
+\hrule
 \subsubsection{Functional Dependencies}
 
 \subsubsection{Primary Keys}
