Added Drakes Domain assumptions

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -165,6 +165,9 @@ Ollert is the backend database for a Kanban Board application (similar to https:
 \subsection{Assumptions About the Domain}
   \begin{itemize}
     \item Users should only have access to the boards they are members of
+    \item Each board has one owner
+    \item Each task has a board
+    \item Each comment has a task
   \end{itemize}
 
 \subsection{Database Design Process}
