Add better Intro

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -141,7 +141,7 @@
 %Begin our document--------------------------------
 \section{Database Design}
 \subsection{Introduction}
-Ollert is the backend database for a Kanban Board application (similar to https://Trello.com). It supports multiple users collaborating on one or many boards, through comments and task generation.
+Ollert is the backend database for a Kanban Board application (similar to https://Trello.com). It supports multiple users collaborating on one or many boards, through comments and task generation. While offering many powerful queries to allow front end representation of useful data to the end user.
 
 \pagebreak
 \subsection{ER Diagram}
